# opticsketch

./: CMakeLists.txt  LICENSE  README.md
assets/shaders/: bloom_blur.frag  bloom_composite.frag  bloom_extract.frag  fullscreen.vert  gradient_bg.frag  grid.frag  grid.vert  material.frag
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/elements/: annotation.cpp  annotation.h  basic_elements.cpp  basic_elements.h  element.cpp  element.h  measurement.cpp  measurement.h
src/export/: export_animation.cpp  export_animation.h  export_png.cpp  export_png.h  export_svg.cpp  export_svg.h  export_tikz.cpp  export_tikz.h  optical_symbols.cpp  optical_symbols.h
src/input/: shortcut_manager.cpp  shortcut_manager.h
src/optics/: ray_tracer.cpp  ray_tracer.h
src/project/: project.cpp  project.h
src/render/: beam.cpp  beam.h  gizmo.cpp  gizmo.h  mesh_loader.cpp  mesh_loader.h  raycast.cpp  raycast.h  shader.cpp  shader.h  viewport.cpp  viewport.h
src/scene/: group.cpp  group.h  scene.cpp  scene.h
src/style/: scene_style.cpp  scene_style.h
src/templates/: templates.cpp  templates.h
src/ui/: animation_export_panel.cpp  animation_export_panel.h  library_panel.cpp  library_panel.h  outliner_panel.cpp  outliner_panel.h  properties_panel.cpp  properties_panel.h  shortcuts_panel.cpp  shortcuts_panel.h  style_editor_panel.cpp  style_editor_panel.h  template_panel.cpp  template_panel.h  theme.cpp  theme.h  toolbox_panel.cpp  toolbox_panel.h
src/undo/: undo.cpp  undo.h
